Took out vh units completely, set height 100%, -flicker-bug

--- a/css/style.css
+++ b/css/style.css
@@ -556,8 +556,7 @@ nav .dropdown-content li > a:focus {
 }
 
 #form1 {  
-  width: 100%;  
-  min-height: 100vh;  
+  width: 100%;      
 }
 
 #form1 .empty {
